--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="socials">
       <a href="https://linkedin.com/in/sruthijha" target="_blank">in</a>
       <a href="https://github.com/jayywiz" target="_blank">gh</a>
-      <a href="mailto:sruthijha@email.com">g</a>
+      <a href="mailto:sruthipagolu@gmail.com">g</a>
     </div>
   </header>
 </body>
