--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sruthijha | Data Science Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-v2uJZQEqGHByEx2h8ACVpA3fYOcVrMIja6VVuQGhCVpQnffW6Q1PIlZyIkH+scELQuN7uL2FyW5wKjcA6+HHTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     body {
       margin: 0;
@@ -73,7 +73,7 @@
 </head>
 <body>
   <header>
-    <h1>Sruthijha</h1>
+    <h1>Sruthijha Pagolu</h1>
     <div class="typing">I'm a Data Scientist</div>
 
     <nav>
@@ -100,3 +100,4 @@
   </header>
 </body>
 </html>
+
