--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
   <header>
-    <h1>Sruthijha</h1>
+    <h1>Sruthijha Pagolu</h1>
     <div class="typing">
       <span id="typed-text"></span><span class="cursor">|</span>
     </div>
@@ -79,7 +79,7 @@
 
     <div class="socials">
       <a href="https://linkedin.com/in/sruthijha" target="_blank" title="LinkedIn">
-        <i class="fab fa-linkedin-in"></i>
+        <i class="https://fontawesome.com/v5/icons/linkedin-in?f=brands&s=solid"></i>
       </a>
       <a href="https://github.com/jayywiz" target="_blank" title="GitHub">
         <i class="fab fa-github"></i>
